# ML

./: .gitignore  README.md  README.rst  autotype.sh
HW1/: LSE.py
hw1/: README.md  main.py  pyproject.toml
hw1/ml/: Regression.py  __init__.py
hw2/: README.md  main.py  pyproject.toml
hw2/hw2_data/: readfile.py
hw2/ml/: Naive_Bayes_classifier.py  Online_learning.py  __init__.py  readfile.py
hw2/model/: likelihood.npy  variance.npy
hw2/tests/: test_ml.py
hw3/: README.md  main.py  pyproject.toml
hw3/ml/: Bayesian_linear_regression.py  Random_data_generator.py  Sequential_estimator.py  __init__.py
hw4/: main.py  pyproject.toml
hw4/ml/: EM_algorithm.py  Logistic_regression.py  Random_data_generator.py  __init__.py  readfile.py
hw5/: ML_HW5_report.docx  README.md  main.py  pyproject.toml
hw5/ml/: Gaussian_process.py  SVM.py  __init__.py
hw6/: README.rst  main.py  pyproject.toml
hw6/ml/: __init__.py  kernel_kmeans.py  spectral_clustering.py
hw7/: README.rst  autorun.sh  config.py  main.py  pyproject.toml  result.txt
hw7/ml/: __init__.py  kernel_eigenfaces.py  tsne.py
